--- a/tests/init/Dockerfile
+++ b/tests/init/Dockerfile
@@ -4,8 +4,10 @@ MAINTAINER Chi-Jui Wu <cjw21@st-andrews.ac.uk>
 
 RUN apt-get update
 
-#RUN apt-get install -y python-dev python-distribute python-pip
+RUN apt-get install -y python-dev python-distribute python-pip
 
-#Run pip install -r requirements.txt
+ADD . .
 
-#CMD python run.py
+RUN pip install -r requirements.txt
+
+CMD python run.py
