--- a/recompute/server/data/Vagrantfile
+++ b/recompute/server/data/Vagrantfile
@@ -5,13 +5,11 @@ Vagrant.configure("2") do |config|
   config.vm.network "forwarded_port", guest:8000, host:8000
 
   config.vm.provision :shell, :inline => "apt-get update"
+  config.vm.provision :shell, :inline => "apt-get install -y git"
   config.vm.provision :shell, :inline => "apt-get install -y build-essential"
   config.vm.provision :shell, :inline => "apt-get install -y python python-dev python-pip python-virtualenv"
 
   config.vm.provision :shell, :inline => "git clone https://github.com/cjw-charleswu/Recompute.git"
-  config.vm.provision :shell, :inline => "cd Recompute/"
-  config.vm.provision :shell, :inline => "virtualenv venv"
-  config.vm.provision :shell, :inline => "source venv/bin/activate"
-  config.vm.provision :shell, :inline => "pip install -r requirements.txt"
+  config.vm.provision :shell, :inline => "cd Recompute/ && virtualenv venv && source venv/bin/activate && pip install -r requirements.txt"
 
 end
