--- a/recompute/server/configs/nodejs.vagrant.config
+++ b/recompute/server/configs/nodejs.vagrant.config
@@ -6,7 +6,9 @@ Vagrant.configure("2") do |config|
   config.vm.provision :shell, :inline => "apt-get update"
   config.vm.provision :shell, :inline => "apt-get install -y git"
   config.vm.provision :shell, :inline => "apt-get install -y build-essential libssl-dev"
-  config.vm.provision :shell, :inline => "apt-get install -y nodejs npm"
+  config.vm.provision :shell, :inline => "curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.25.4/install.sh | bash"
+  config.vm.provision :shell, :inline => "source ~/.profile"
+  config.vm.provision :shell, :inline => "nvm install <VERSION>"
 
   config.vm.provision :shell, :inline => "git clone <GITHUB_URL>"
   config.vm.provision :shell, :inline => "cd <GITHUB_REPO_NAME>/ && npm install"
