--- a/recompute/server/configs/python.vagrant.config
+++ b/recompute/server/configs/python.vagrant.config
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision :shell, :inline => "apt-get update"
   config.vm.provision :shell, :inline => "apt-get install -y git"
   config.vm.provision :shell, :inline => "apt-get install -y build-essential"
-  config.vm.provision :shell, :inline => "apt-get install -y python python-dev python-pip python-virtualenv"
+  config.vm.provision :shell, :inline => "apt-get install -y python<VERSION> python<VERSION>-dev python-pip python-virtualenv"
 
   config.vm.provision :shell, :inline => "git clone <GITHUB_URL>"
   config.vm.provision :shell, :inline => "cd <GITHUB_REPO_NAME>/ && virtualenv venv && source venv/bin/activate && pip install -r requirements.txt"
