--- a/recompute/server/configs/nodejs.vagrant.config
+++ b/recompute/server/configs/nodejs.vagrant.config
@@ -1,16 +1,45 @@
+
+$rootScript = <<SCRIPT
+  cd /home/vagrant
+  apt-get update
+  apt-get install -y curl git build-essential libssl-dev firefox
+SCRIPT
+
+$userScript = <<SCRIPT
+  cd /home/vagrant
+  wget -qO- https://raw.github.com/creationix/nvm/master/install.sh | sh
+  export NVM_DIR="/home/vagrant/.nvm"
+  [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm
+  nvm install <VERSION>
+  nvm alias default <VERSION>
+  npm install -g gulp
+
+  git clone <GITHUB_URL>
+  cd <GITHUB_REPO_NAME>/
+  rm /home/vagrant/.npm/ -rf
+  rm node_modules/ -rf
+  npm cache clean
+  npm install
+  gulp build
+SCRIPT
+
 Vagrant.configure("2") do |config|
 
   config.vm.box = "<BOX>"
   config.vm.hostname = "<HOSTNAME>.box"
 
-  config.vm.provision :shell, :inline => "apt-get update"
-  config.vm.provision :shell, :inline => "apt-get install -y git"
-  config.vm.provision :shell, :inline => "apt-get install -y build-essential libssl-dev"
-  config.vm.provision :shell, :inline => "curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.25.4/install.sh | bash"
-  config.vm.provision :shell, :inline => "source ~/.profile"
-  config.vm.provision :shell, :inline => "nvm install <VERSION>"
+  # Removes "stdin: is not a tty" annoyance as per
+  # https://github.com/SocialGeeks/vagrant-openstack/commit/d3ea0695e64ea2e905a67c1b7e12d794a1a29b97
+  config.ssh.shell = "bash -c 'BASH_ENV=/etc/profile exec bash'"
 
-  config.vm.provision :shell, :inline => "git clone <GITHUB_URL>"
-  config.vm.provision :shell, :inline => "cd <GITHUB_REPO_NAME>/ && npm install"
+  config.vm.provider "virtualbox" do |vb|
+    # Allow the creation of symlinks for nvm
+    # http://blog.liip.ch/archive/2012/07/25/vagrant-and-node-js-quick-tip.html
+    vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/vagrant","1"]
+  end
+
+  # Shell provisioning.
+  config.vm.provision "shell", inline: $rootScript
+  config.vm.provision "shell", inline: $userScript, privileged: false
 
 end
