--- a/recompute/server/configs/python.vagrant.config
+++ b/recompute/server/configs/python.vagrant.config
@@ -1,14 +1,30 @@
+
+$rootScript = <<SCRIPT
+  cd /home/vagrant
+  apt-get update
+  apt-get install -y git build-essential python<VERSION> python<VERSION>-dev python-pip python-virtualenv
+SCRIPT
+
+$userScript = <<SCRIPT
+  cd /home/vagrant
+  git clone <GITHUB_URL>
+  cd <GITHUB_REPO_NAME>/
+  virtualenv venv
+  source venv/bin/activate
+  pip install -r requirements.txt
+SCRIPT
+
 Vagrant.configure("2") do |config|
 
   config.vm.box = "<BOX>"
   config.vm.hostname = "<HOSTNAME>.box"
 
-  config.vm.provision :shell, :inline => "apt-get update"
-  config.vm.provision :shell, :inline => "apt-get install -y git"
-  config.vm.provision :shell, :inline => "apt-get install -y build-essential"
-  config.vm.provision :shell, :inline => "apt-get install -y python<VERSION> python<VERSION>-dev python-pip python-virtualenv"
+  # Removes "stdin: is not a tty" annoyance as per
+  # https://github.com/SocialGeeks/vagrant-openstack/commit/d3ea0695e64ea2e905a67c1b7e12d794a1a29b97
+  config.ssh.shell = "bash -c 'BASH_ENV=/etc/profile exec bash'"
 
-  config.vm.provision :shell, :inline => "git clone <GITHUB_URL>"
-  config.vm.provision :shell, :inline => "cd <GITHUB_REPO_NAME>/ && virtualenv venv && source venv/bin/activate && pip install -r requirements.txt"
+  # Shell provisioning.
+  config.vm.provision "shell", inline: $rootScript
+  config.vm.provision "shell", inline: $userScript, privileged: false
 
 end
