--- a/recompute/server/configs/nodejs.vagrant.config
+++ b/recompute/server/configs/nodejs.vagrant.config
@@ -7,17 +7,19 @@ SCRIPT
 
 $userScript = <<SCRIPT
   cd /home/vagrant
-  wget -qO- https://raw.github.com/creationix/nvm/master/install.sh | sh
-  export NVM_DIR="/home/vagrant/.nvm"
-  [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm
+  curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
+  echo "source /home/vagrant/.nvm/nvm.sh" >> /home/vagrant/.profile
+  source /home/vagrant/.profile
   nvm install <VERSION>
   nvm alias default <VERSION>
+  echo "nvm: $(nvm --version)"
+  echo "node: $(node --version)"
+  echo "npm: $(npm --version)"
+  npm install -g npm@next
   npm install -g gulp
 
   git clone <GITHUB_URL>
   cd <GITHUB_REPO_NAME>/
-  rm /home/vagrant/.npm/ -rf
-  rm node_modules/ -rf
   npm cache clean
   npm install
   gulp build
