--- a/recompute/server/software/recompute/Vagrantfile
+++ b/recompute/server/software/recompute/Vagrantfile
@@ -1,26 +1,27 @@
 
 $rootScript = <<SCRIPT
   cd /home/vagrant
-  <ADD_APT_REPOSITORY>
+  
   apt-get update -y
-  apt-get install -y git build-essential python<LANG_VERSION> python<LANG_VERSION>-dev python-pip python-virtualenv
-  <APT_GET_INSTALL>
+  apt-get install -y git build-essential python2.7 python2.7-dev python-pip python-virtualenv
+  apt-get install -y 
+
 SCRIPT
 
 $userScript = <<SCRIPT
   cd /home/vagrant
-  git clone <GITHUB_URL>
-  cd <GITHUB_REPO_NAME>/
+  git clone https://github.com/cjw-charleswu/Recompute
+  cd Recompute/
   virtualenv venv
   source venv/bin/activate
-  <INSTALL_SCRIPT>
-  <TEST_SCRIPT>
+  pip install -r requirements.txt
+  
 SCRIPT
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "<BOX>"
-  config.vm.hostname = "<HOSTNAME>.box"
+  config.vm.box = "ubuntu/trusty64"
+  config.vm.hostname = "recompute.box"
 
   # Removes "stdin: is not a tty" annoyance as per
   # https://github.com/SocialGeeks/vagrant-openstack/commit/d3ea0695e64ea2e905a67c1b7e12d794a1a29b97
