--- a/recompute/server/software/gap/Vagrantfile
+++ b/recompute/server/software/gap/Vagrantfile
@@ -3,9 +3,9 @@ $rootScript = <<SCRIPT
   cd /home/vagrant
   apt-get update -y
   apt-get install -y software-properties-common python-software-properties
+  apt-get install -y git build-essential gcc clang make autotools-dev autoconf cmake scons
   
   apt-get update -y
-  apt-get install -y git build-essential gcc clang make autotools-dev autoconf cmake scons
   apt-get install -y libgmp3-dev texlive-latex-base texlive-latex-recommended texlive-latex-extra texlive-extra-utils texlive-fonts-recommended texlive-fonts-extra
 
 SCRIPT
@@ -65,6 +65,6 @@ Vagrant.configure("2") do |config|
 
   # Shell provisioning
   config.vm.provision "shell", inline: $rootScript
-  config.vm.provision "shell", inline: $userScript, privileged: false
+  config.vm.provision "shell", inline: $userScript
 
 end
