update README and gitignore contents in software dir

--- a/recompute/server/software/gecode/Vagrantfile
+++ b/recompute/server/software/gecode/Vagrantfile
@@ -24,11 +24,11 @@ SCRIPT
 Vagrant.configure("2") do |config|
 
   config.vm.box = "ubuntu/trusty64"
-  config.vm.hostname = "geocode.box"
+  config.vm.hostname = "gecode.box"
 
   # more cpu and memory
   config.vm.provider "virtualbox" do |v|
-    v.memory = 2048
+    v.memory = 4098
     v.cpus = 2
   end
 
