--- a/recompute/server/recomputations/recompute/Vagrantfile
+++ b/recompute/server/recomputations/recompute/Vagrantfile
@@ -3,32 +3,29 @@ $rootScript = <<SCRIPT
   cd /home/vagrant
   apt-get update -y
   apt-get install -y software-properties-common python-software-properties
-  apt-get install -y git build-essential python<LANG_VERSION> python<LANG_VERSION>-dev python-pip python-virtualenv
-  <ADD_APT_REPOSITORY>
+  
   apt-get update -y
-  <APT_GET_INSTALL>
+  apt-get install -y git build-essential python2.7 python2.7-dev python-pip python-virtualenv
+  apt-get install -y 
+
 SCRIPT
 
 $userScript = <<SCRIPT
   cd /home/vagrant
-  git clone <GITHUB_URL> -b master
-  cd <GITHUB_REPO_NAME>/
+  git clone https://github.com/cjw-charleswu/Recompute -b master --single-branch
+  cd Recompute/
   virtualenv venv
   source venv/bin/activate
-  <INSTALL_SCRIPT>
-  <TEST_SCRIPT>
+  pip install -r requirements.txt
+  cd tests/
+  chmod a+x server.sh
+  ./server.sh
 SCRIPT
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "<BOX>"
-  config.vm.hostname = "<HOSTNAME>.box"
-
-  config.vm.provider "virtualbox" do |v|
-    # more cpu and memory
-    v.memory = <MEMORY>
-    v.cpus = <CPUS>
-  end
+  config.vm.box = "ubuntu/trusty64"
+  config.vm.hostname = "recompute.box"
 
   # Removes "stdin: is not a tty" annoyance as per
   # https://github.com/SocialGeeks/vagrant-openstack/commit/d3ea0695e64ea2e905a67c1b7e12d794a1a29b97
