--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.vagrant/
 *.box
 *recomputations/
+*logs/
 *backup/
 
 # pycharm
@@ -10,8 +11,8 @@
 #venv
 *venv/
 
-#tty.js
-tty.js/
+#redis
+*redis*/
 
 #butterfly
 butterfly/
